--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "test": "vitest",
+    "test": "npm run type-check && vitest",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "^14.2.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -20,6 +20,7 @@
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vitest/coverage-istanbul": "^3.2.2",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.50.0",
     "eslint-config-next": "14.0.0",
