--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "^14.2.29",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
