--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["vitest/globals", "@testing-library/jest-dom"],
+    "types": [
+      "vitest/globals",
+      "@testing-library/jest-dom",
+      "playwright"
+    ],
     "plugins": [
       {
         "name": "next"
