--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "incremental": true,
     "types": [
       "vitest/globals",
-      "@testing-library/jest-dom",
-      "playwright"
+      "@testing-library/jest-dom"
     ],
     "plugins": [
       {
@@ -29,5 +28,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "playwright.config.ts", "tests/e2e"]
 }
