--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ NEXT_PUBLIC_API_URL=http://localhost:3000/api
 # Database Configuration (for future implementation)
 DATABASE_URL=sqlite:./dev.db
 
+# JWT Authentication
+JWT_SECRET=your-jwt-secret-key-change-in-production-min-32-chars
+JWT_REFRESH_SECRET=your-jwt-refresh-secret-key-change-in-production-min-32-chars
+JWT_ISSUER=enterprise-ec-demo
+JWT_AUDIENCE=enterprise-ec-demo
+
 # Authentication (for future implementation)
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-development-secret-key-change-in-production
