--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,11 @@ NEXT_PUBLIC_SITE_NAME=Enterprise EC Demo
 # API Configuration
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
 
-# Database Configuration (for future implementation)
-DATABASE_URL=sqlite:./dev.db
+# Supabase Configuration
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+DATABASE_URL=postgresql://username:password@db.your-project.supabase.co:5432/postgres
 
 # JWT Authentication
 JWT_SECRET=your-jwt-secret-key-change-in-production-min-32-chars
